# ESP32-C3_Radio

./: .gitattributes  .gitignore  CHANGELOG.md  README.md  THIRD_PARTY_NOTICES.md  platformio.ini
power_profiler/: README.md  pyproject.toml  requirements.txt  run_web_ui.py
power_profiler/comparisons/: cc1101_v1_433_vs_v2_868.csv  cc1101_v1_433_vs_v2_868.xlsx  cc1101_v2_868_energy_vs_payload_data.csv  cc1101_v2_868_payload_128_512_1024.csv  cc1101_v2_868_payload_128_512_1024.xlsx
power_profiler/comparisons/cc1101_v1_433/: cc1101_v1_433_continuous.csv  cc1101_v1_433_continuous.xlsx  cc1101_v1_433_continuous_average_power.tex  cc1101_v1_433_continuous_rx_delivery.tex  (+14 more)
power_profiler/radio_power_profiler/: __init__.py  analysis.py  cli.py  continuous_runner.py  models.py  planning.py  ppk.py  profiles.json  profiles.py  results.py  runner.py  serial_radio.py  web_app.py
power_profiler/study/: README.md  generate_study.py  generated_findings.tex  radio_module_energy_study.tex
power_profiler/tests/: test_analysis.py  test_cli.py  test_continuous_runner.py  test_planning.py  test_ppk.py  test_reports.py  test_results.py  test_runner.py  test_serial_radio.py  test_web_app.py
power_profiler/tools/: generate_continuous_report.py  generate_e79_reports.py  generate_energy_plot.py  generate_lora_campaign_reports.py  generate_lora_variant_comparison.py  generate_loss_vs_rate_report.py  generate_transfer_report.py  generate_tx_rx_plots.py  generate_web_campaign_reports.py  merge_continuous_results.py  render_lora_campaign_plots.py  render_web_campaign_plots.py
(+1005 files in other folders)
