[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "esp32-radio-power-profiler"
version = "0.1.0"
description = "Automated per-packet radio current measurements with Nordic PPK2"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
  "ppk2-api==0.9.2",
  "pyserial>=3.5,<4",
]

[project.scripts]
radio-power-profiler = "radio_power_profiler.cli:main"

[tool.setuptools.package-data]
radio_power_profiler = ["profiles.json"]
